--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,14 @@ repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:28.0-jre'
+
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.2.1.RELEASE'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
@@ -46,4 +49,9 @@ run {
 task runAgent(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     main = 'pl.edu.mimuw.cloudatlas.agent.Agent'
+}
+
+task runClient(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'pl.edu.mimuw.cloudatlas.client.Client'
 }
