--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,3 +15,8 @@ jobs:
         java-version: 1.8
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Upload test report
+      uses: actions/upload-artifact@v1
+      with:
+        name: test-report
+        path: /home/runner/work/CloudAtlas/CloudAtlas/build/reports/tests/test
