--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Gradle
-      run: ./scripts/ci
+      run: ./gradlew test
     - name: Upload test report
       uses: actions/upload-artifact@v1
       with:
