--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,4 +14,9 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew test
+    - name: Upload test report
+      uses: actions/upload-artifact@v1
+      with:
+        name: test-report
+        path: /home/runner/work/CloudAtlas/CloudAtlas/build/reports/tests/test
