Upload test artifacts irrespective of test success

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew test
     - name: Upload test report
+      if: always()
       uses: actions/upload-artifact@v1
       with:
         name: test-report
