--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Gradle
-      run: ./gradlew test
+      run: ./gradlew test -Dhostname=localhost
     - name: Upload test report
       if: always()
       uses: actions/upload-artifact@v1
