Set udup config from system properties

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,18 @@ ext.freshnessPeriod = {
     return System.getProperty("freshnessPeriod") ?: 60 * 1000
 }
 
+ext.port = {
+    return System.getProperty("port") ?: 5999;
+}
+
+ext.timeout = {
+    return System.getProperty("timeout") ?: 5000;
+}
+
+ext.bufsize = {
+    return System.getProperty("bufsize") ?: 512;
+}
+
 repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
