--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-test:2.2.1.RELEASE'
 
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 
