--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=0
+server.port=8082
 spring.application.name=CloudAtlas Client
 
-spring.thymeleaf.cache=false
+spring.thymeleaf.cache=true
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/pl/edu/mimuw/cloudatlas/client/templates/
 spring.thymeleaf.suffix=.html
