--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,14 @@ ext.freshnessPeriod = {
     return System.getProperty("freshnessPeriod") ?: 60 * 1000
 }
 
+ext.queryPeriod = {
+    return System.getProperty("queryPeriod") ?: 5 * 1000
+}
+
+ext.gossipPeriod = {
+    return System.getProperty("gossipPeriod") ?: 5 * 1000
+}
+
 ext.UDUPHostname = {
     return System.getProperty("hostname") ?: "localhost"
 }
@@ -79,6 +87,8 @@ task runAgent(type: JavaExec) {
     main = 'pl.edu.mimuw.cloudatlas.agent.Agent'
     systemProperty 'java.rmi.server.hostname', hostname()
     systemProperty 'freshness_period', freshnessPeriod()
+    systemProperty 'query_period', queryPeriod()
+    systemProperty 'gossip_period', gossipPeriod()
     systemProperty 'UDUPServer.hostname', UDUPHostname()
     systemProperty 'UDUPServer.port', port()
     systemProperty 'UDUPServer.timeout', port()
