--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,14 @@ ext.querySignerHostname = {
 }
 
 /*
+Example: -DfallbackContacts=\{\"/uw/violet07\":[192,168,0,11]}
+escape at the beginning and before "
+ */
+ext.fallbackContacts = {
+    return System.getProperty("fallbackContacts") ?: "{\"" + zonePath() + "\":[127,0,0,1]}"
+}
+
+/*
 Possible options:
 RoundRobinExp
 RoundRobinUniform
@@ -138,6 +146,7 @@ task runFetcher(type: JavaExec) {
     main = 'pl.edu.mimuw.cloudatlas.fetcher.Fetcher'
     args(hostname() , 1099)
     systemProperty 'zone_path', zonePath()
+    systemProperty 'fallback_contacts', fallbackContacts()
 }
 
 task runInterpreter(type: JavaExec) {
